# hiilikartta-data-service

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.prod.sh  docker-entrypoint.sh  dynamic_conf.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 218b9d22b748_add_last_accessed_ts.py  63fa38593e78_updgrade_timestamps.py  643dcd0a493b_add_visible_ui_id_column.py
app/: config.py  main.py  saq_worker.py  worker.py
app/auth/: validator.py
app/calculator/: calculator.py  utils.py
app/database/: database.py  query.py
app/db/: connection.py  gis.py  plan.py
app/db/models/: plan.py
app/types/: calculator.py  general.py
app/utils/: data_loader.py  logger.py  retry_decorator.py
notebooks/: data.ipynb  misc.ipynb
sql/: create.sql
sql/gis/: luke_mvmisegm_muuttujat_kokomaa.sql
sql/state/: create.sql
tests/api/: test_app.py  test_calc.py
tests/modules/db/: test_gis.py
