[tool.poetry]
name = "hiilikartta-data-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
fastapi = "^0.85.2"
python-multipart = "^0.0.5"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
