[tool.poetry]
name = "hiilikartta-data-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app"},
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
python-multipart = "^0.0.5"
pandas = "^1.5.1"
rasterio = "^1.3.3"
rioxarray = "^0.12.4"
geopandas = "^0.12.1"
matplotlib = "^3.6.2"
geocube = "^0.3.3"
asyncpg = "^0.27.0"
rich = "^12.6.0"
pydantic = "^1.10.2"
owslib = "^0.27.2"
httpx = "^0.23.3"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.21"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
