[tool.poetry]
name = "hiilikartta-data-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app"},
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
uvicorn = "^0.26.0"
fastapi = "^0.109.0"
python-multipart = "^0.0.5"
matplotlib = "^3.6.2"
geocube = "^0.3.3"
asyncpg = "^0.27.0"
rich = "^12.6.0"
pydantic = "^1.10.2"
owslib = "^0.27.2"
httpx = "^0.23.3"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
pytest-asyncio = "^0.21.1"
pandas = "^2.1.3"
rasterio = "^1.3.9"
rioxarray = "^0.15.0"
rasterstats = "^0.19.0"
geopandas = "^0.14.1"
fiona = "^1.9.5"
shapely = "^2.0.2"
celery = "^5.3.6"
flower = "^2.0.1"
requests = "^2.31.0"
saq = {extras = ["hiredis", "web"], version = "^0.12.2"}
watchdog = "^3.0.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.10.0"
psycopg2 = "^2.9.9"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
